# clerm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  clerm.go  compiler.go  compiler_vendor.go  descriptions.md  go.mod  go.work.versions  resolver_api.go  resolver_forward.go  visit.refresh
.github/workflows/: ci.yml  release.yml
capability/: capability.go
clermcfg/: clermcfg.go
clermreq/: clermreq.go
clermresp/: clermresp.go
cmd/clerm/: main.go
cmd/clerm-resolver/: main.go
docs/: README.md  other-languages.md  resolver-architecture.md  resolver-daemon.md  resolver-go.md  resolver-testing.md
e2e/: clerm_e2e_test.go
examples/: book_visit.payload  market.search_products.payload  market_catalog.clermfile  payments.authorize_charge.payload  payments_gateway.clermfile  provider_search.clermfile  search_providers.payload  setup.md  shopify.buy_products.payload  shopify.check_balance.payload  shopify.clermfile  shopify.compiler.md  shopify.make_store.payload  shopify.search_merchants.payload  shopify.search_products.payload
intergrations/: registry.md
internal/capability/: replay.go  replay_test.go  token.go  token_test.go
internal/clermcfg/: benchmark_test.go  codec.go  codec_test.go
internal/clermreq/: benchmark_test.go  codec.go  (+1 more)
maintainers-review/: optimizations.md
other_servers/: README.md
other_servers/rust/: Cargo.toml  README.md
other_servers/rust/src/: main.rs
platform/: platform.go
registryrpc/: client.go  client_test.go  types.go
resolver/: resolver.go
schema/: schema.go
(+55 files in other folders)
