[package]
name = "clerm-rust-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
